RET-6005 - Updates (#3164)
* Update definitions

* Update controllers

* Update controllers tests

* updates for representative contact details.

---------

Co-authored-by: Mehmet Tahir Dede <105645217+JustMehmet@users.noreply.github.com>
Co-authored-by: Mehmet Tahir Dede <mehmet.dede@justice.gov.uk>